Added projects page, with first scroll button for projects working.

--- a/root/index.html
+++ b/root/index.html
@@ -3,20 +3,28 @@
   <head>
     <title>Gabriel McFadyen</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
+    <link rel="icon" type="image/x-icon" href="images/icon.png" />
   </head>
   <body>
-    <navbar>
+    <nav>
       <ul class="nav-list">
         <li class="nav-item"><a>GABRIEL MCFADYEN</a></li>
-        <li class="nav-item"><a href="https://www.linkedin.com/in/gabrielmcfadyen">LINKEDIN</a></li>
-        <li class="nav-item"><a href="https://github.com/gabe-mc">GITHUB</a></li>
-        <li class="nav-item"><a href="#">CONTACT</a></li>
+        <li class="nav-item">
+          <a href="https://www.linkedin.com/in/gabrielmcfadyen" target="blank"
+            >LINKEDIN</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="https://github.com/gabe-mc" target="blank">GITHUB</a>
+        </li>
+        <li class="nav-item">
+          <a href="mailto: gabemcfadyen@icloud.com">CONTACT</a>
+        </li>
       </ul>
-    </navbar>
+    </nav>
 
     <div class="gm-circle">
-      <div id="circle"></div>
+      <div id="square"></div>
     </div>
     <div class="gm-text">
       <h2>GM.</h2>
@@ -24,16 +32,53 @@
 
     <hr />
 
+    <!-- Main homepage body between hr lines, with links to projects, experience, resume, and an about blurb -->
     <div class="main-text">
-            <li><a href="google.com">PROJECTS</a></li>
-            <li><a href="#">EXPERIENCE</a></li>
-            <li><a href="#">RESUME</a></li>
+      <li><a href="#projects">PROJECTS</a></li>
+      <li><a href="#">EXPERIENCE</a></li>
+      <li><a href="#">RESUME</a></li>
     </div>
     <div class="about-text">
-        <h2>ABOUT</h2>
-        <p align="right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+      <h2>ABOUT</h2>
+      <p align="right">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum
+      </p>
     </div>
-    <hr/>
 
+    <hr />
+
+    <div id=projects class=projects>
+        <h1>PROJECTS :</h1>
+    </div>
+    <div class="iq-gen">
+        <img src="images/iq-gen-1.png" alt="IQ-GEN Cover Photo">
+        <span id="iq-gen-title">IQ-GEN</span>
+    </div>
+    <div class="about-iq">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum</p>
+    </div>
+    <div class="iq-gen-photo2">
+        <img src="images/iq-gen-2.png" alt="IQ-GEN Image of Interface" style="float:right">
+        <span><p align="right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum</p></span>
+    </div>
+    </body>
   </body>
 </html>
