Added new images, created new files folder for resume, and added more to the homepage.

--- a/root/index.html
+++ b/root/index.html
@@ -35,8 +35,8 @@
     <!-- Main homepage body between hr lines, with links to projects, experience, resume, and an about blurb -->
     <div class="main-text">
       <li><a href="#projects">PROJECTS</a></li>
-      <li><a href="#">EXPERIENCE</a></li>
-      <li><a href="#">RESUME</a></li>
+      <li><a href="#experience">EXPERIENCE</a></li>
+      <li><a href="#resume">RESUME</a></li>
     </div>
     <div class="about-text">
       <h2>ABOUT</h2>
@@ -78,6 +78,59 @@
             velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
             occaecat cupidatat non proident, sunt in culpa qui officia deserunt
             mollit anim id est laborum</p></span>
+    </div>
+    <hr />
+    <div id="experience">
+        <h1>EXPERIENCE :</h1>
+    </div>
+    <div class="sgc">
+        <img src="images/sgc-logo.png" alt="St. George Capital Logo">
+        <span><h2><a href="https://www.stgeorgecapital.ca/" target="blank">ST. GEORGE CAPITAL</a></h2></span>
+        <span id="p">Event Director - Jun. 2024 - Present</span>
+    </div>
+    <div id="sgc-description">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+    </div>
+    <div class="cmh">
+        <img src="images/cmh-logo.png" alt="Campbellford Memorial Hospital Logo">
+        <span><h2><a href="https://cmh.ca/" target="blank">CMH FINANCE</a></h2></span>
+        <span id="p">Finance Intern - Nov. 2022 - Jun. 2024</span>
+    </div>
+    <div id="cmh-description">
+        <p align="right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+    </div>
+    <div class="csbk">
+        <img src="images/csbk-logo.png" alt="Canadian Superbike Championship Logo">
+        <span><h2><a href="https://csbk.ca/" target="blank">CSBK</a></h2></span>
+        <span id="p">Camera Operator - Jun 2024 - Sep 2024</span>
+    </div>
+    <div id="csbk-description">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+    </div>
+    <div id="box"></div>
+    <hr />
+    <div id="resume"><h1>RESUME :</h1></div>
+    <div class="resume-link">
+        <p align="center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+        <img src="images/resume.png" alt="resume">
+        <p id="download"><a href="files/Gabriel_McFadyen_Resume.pdf" target="blank">Download my resume</a></p>
+    </div>
+    <hr / id="end-line">
+    <div id="end-writing">
+        <span>GABRIEL MCFADYEN</span>
+        <span>2024</span>
     </div>
     </body>
   </body>
