changed body text to draft copy

--- a/root/index.html
+++ b/root/index.html
@@ -41,13 +41,7 @@
     <div class="about-text">
       <h2>ABOUT</h2>
       <p align="right">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum
+        Hi! I’m Gabriel, a second-year computer science student at the University of Toronto. I’m majoring in computer science, and taking minors and math and stats alongside. My area of interest spans multiple fields, but I am especially interested in quantitative finance, machine learning, and full-stack software development. I thrive in collaborative environments, and believe teamwork drives innovation and creativity.
       </p>
     </div>
 
@@ -61,23 +55,13 @@
         <span id="iq-gen-title">IQ-GEN</span>
     </div>
     <div class="about-iq">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum</p>
+        <p>IQ-Gen is a free online tool that aims to help young professionals prepare for behavioral interviews by utilizing a large language model to generate personalized interview questions. It was created my myself and a small group of peers for UTMIST’s LLM Engineering program, and was meant to tackle a real-world problem that we ourselves had faced. </p>
     </div>
     <div class="iq-gen-photo2">
         <img src="images/iq-gen-2.png" alt="IQ-GEN Image of Interface" style="float:right">
-        <span><p align="right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim id est laborum</p></span>
+        <span><p align="right">Users are able answer questions by speaking directly to their computer and will receive responses and follow-up questions from a virtual interviewer. The program will then analyze the response, and provide feedback on the user's word choice and the overall quality of the user’s response.
+          Most recently, IQ-GEN has been featured as an interactive booth at UTMIST’s Eigen AI conference, presented alongside a curated selection of student ML projects.
+          </p></span>
     </div>
     <hr />
     <div id="experience">
@@ -89,10 +73,9 @@
         <span id="p">Event Director - Jun. 2024 - Present</span>
     </div>
     <div id="sgc-description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</p>
+        <p>St George Capital is the University of Toronto’s largest quantitative finance club, featuring a quant research division, a quant trading division, and a traditional equity and macroeconomic research division. 
+          <br />As event director at SGC, I am responsible for the planning and executing various networking and student development events, our annual factor research case competition, and a year-end research conference.
+          </p>
     </div>
     <div class="cmh">
         <img src="images/cmh-logo.png" alt="Campbellford Memorial Hospital Logo">
@@ -100,10 +83,7 @@
         <span id="p">Finance Intern - Nov. 2022 - Jun. 2024</span>
     </div>
     <div id="cmh-description">
-        <p align="right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</p>
+        <p align="right">The Campbellford Memorial Hospital (CMH) finance department handles the finances from the entirety of the hospital, from ER costs to pharmacy billings. As an intern within the department, I was able to work on the accounts payable desk, managing the organization and posting of a variety of different types of invoices. Besides learning many general finance and accounting principles, I was able to develop a greater appreciation for the rigor and detail with which financial transactions and records must be handled.</p>
     </div>
     <div class="csbk">
         <img src="images/csbk-logo.png" alt="Canadian Superbike Championship Logo">
@@ -111,19 +91,15 @@
         <span id="p">Camera Operator - Jun 2024 - Sep 2024</span>
     </div>
     <div id="csbk-description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</p>
+        <p>TSN’s Canadian Superbike Championship (CSBK) is a nationally televised motorbike racing show, on which I have worked as both a production assistant, and more recently as a camera operator. 
+          Through CSBK, I have been able to learn more about the organization of teams with very diverse talents, and have been able to experience working collaboratively in high pressure situations.
+          </p>
     </div>
     <div id="box"></div>
     <hr />
     <div id="resume"><h1>RESUME :</h1></div>
     <div class="resume-link">
-        <p align="center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat.</p>
+        <p align="center">Feel free to download my resume and reach out with any questions. I'm currently available for internship opportunities beginning May 2025.</p>
         <img src="images/resume.png" alt="resume">
         <p id="download"><a href="files/Gabriel_McFadyen_Resume.pdf" target="blank">Download my resume</a></p>
     </div>
