Updated About section

--- a/root/index.html
+++ b/root/index.html
@@ -41,7 +41,7 @@
     <div class="about-text">
       <h2>ABOUT</h2>
       <p align="right">
-        Hi! I’m Gabriel, a second-year computer science student at the University of Toronto. I’m majoring in computer science, and taking minors and math and stats alongside. My area of interest spans multiple fields, but I am especially interested in quantitative finance, machine learning, and full-stack software development. I thrive in collaborative environments, and believe teamwork drives innovation and creativity.
+        Hi! I’m Gabriel, a second-year computer science student at the University of Toronto. I’m double majoring in Computer Science and Mathematics. My areas of interest spans multiple fields, but I am especially interested in quantitative finance, machine learning, and data science. I thrive in collaborative environments, and believe teamwork drives innovation and creativity.
       </p>
     </div>
 
